eck-docker-ccs/manifests/elasticsearch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __ECK_CLUSTER__-ingress
  namespace: __NAMESPACE__
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - __ES_INGRESS_HOST__
      secretName: __ECK_CLUSTER__-ingress-tls
  rules:
    - host: __ES_INGRESS_HOST__
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: __ECK_CLUSTER__-es-http
                port:
                  number: 9200
